use context api for update

--- a/src/components/base/_main.scss
+++ b/src/components/base/_main.scss
@@ -1,5 +1,4 @@
 //@import "normalize-scss/sass/_normalize.scss";
 //@include normalize;
 
-@import "_base", "_root";
-
+@import '_base', '_root', '_form';
