--- a/src/components/quarks/_typography.scss
+++ b/src/components/quarks/_typography.scss
@@ -3,7 +3,7 @@
   font-family: $font-family-name;
   src: url('#{$directory-fonts}/DFDS-Regular.woff2') format('woff2'),
     url('#{$directory-fonts}/DFDS-Regular.woff') format('woff');
-  font-weight: 400;
+  font-weight: normal;
 }
 
 @font-face {
@@ -11,7 +11,7 @@
   font-family: $font-family-name;
   src: url('#{$directory-fonts}/DFDS-Bold.woff2') format('woff2'),
     url('#{$directory-fonts}/DFDS-Bold.woff') format('woff');
-  font-weight: 700;
+  font-weight: bold;
 }
 
 @font-face {
