--- a/fonts/font.css
+++ b/fonts/font.css
@@ -2,14 +2,14 @@
   font-display: swap;
   font-family: DFDS;
   src: url('./DFDS-Regular.woff2') format('woff2'), url('./DFDS-Regular.woff') format('woff');
-  font-weight: 400;
+  font-weight: normal;
 }
 
 @font-face {
   font-display: swap;
   font-family: DFDS;
   src: url('./DFDS-Bold.woff2') format('woff2'), url('./DFDS-Bold.woff') format('woff');
-  font-weight: 700;
+  font-weight: bold;
 }
 
 @font-face {
